<resources>

    <!-- App -->
    <string name="app_name">Admob-Ads</string>

    <!-- Screen Titles -->
    <string name="entrance_title">Entrance</string>
    <string name="language_title">Language</string>
    <string name="onboarding_title">Onboarding</string>
    <string name="menu_title">Menu</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="feature_one_title">Feature One</string>
    <string name="feature_two_title">Feature Two</string>
    <string name="exit_title">Exit</string>

    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_trending">Trending</string>
    <string name="nav_settings">Settings</string>

    <!-- Actions -->
    <string name="action_continue">Continue</string>
    <string name="action_open_dashboard">Open Dashboard</string>
    <string name="action_feature_one">Feature One</string>
    <string name="action_feature_two">Feature Two</string>
    <string name="action_exit_app">Exit</string>
    <string name="action_cancel">Cancel</string>

    <!-- Ads -->
    <string name="action_rewarded">Rewarded Ad</string>
    <string name="action_rewarded_interstitial">Rewarded Interstitial Ad</string>

</resources>