<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_dashboard"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.hypersoft.ads.practice.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/trendingFragment"
        android:name="com.hypersoft.ads.practice.trending.TrendingFragment"
        android:label="@string/nav_trending"
        tools:layout="@layout/fragment_trending" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.hypersoft.ads.practice.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>