<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvTitleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/nav_home"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        app:layout_constraintBottom_toTopOf="@id/btnFeatureOneHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFeatureOneHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/action_feature_one"
        app:layout_constraintBottom_toTopOf="@id/btnFeatureTwoHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtvTitleHome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFeatureTwoHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/action_feature_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFeatureOneHome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRewardedHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/action_rewarded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFeatureTwoHome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRewardedInterstitialHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="40dp"
        android:text="@string/action_rewarded_interstitial"
        app:layout_constraintBottom_toTopOf="@+id/nativeAdViewHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRewardedHome" />

    <com.hypersoft.ads.practice.gmaAds.nativeAd.view.NativeSmallView
        android:id="@+id/nativeAdViewHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRewardedInterstitialHome" />

</androidx.constraintlayout.widget.ConstraintLayout>