<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvTitleExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_title"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        app:layout_constraintBottom_toTopOf="@id/mbExitAppExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbExitAppExit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/action_exit_app"
        app:layout_constraintBottom_toTopOf="@id/mbCancelExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtvTitleExit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbCancelExit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/action_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mbExitAppExit" />

</androidx.constraintlayout.widget.ConstraintLayout>